--- a/public/information.html
+++ b/public/information.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/student_dashboard.css">
     <link rel="stylesheet" href="css/information.css">
+    <link rel="icon" href="/public/img/ScholarWellLogo.png">
 </head>
 
 <body>
