--- a/public/register.html
+++ b/public/register.html
@@ -1,28 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register Page</title>
-
-    <link rel="stylesheet" href="css/form.css">
-
-</head>
-<body>
+    <link rel="icon" href="/public/img/ScholarWellLogo.png" />
+    <link rel="stylesheet" href="css/form.css" />
+  </head>
+  <body>
     <div class="alert-box">
-        <p class="alert"></p>
-    </div> 
+      <p class="alert"></p>
+    </div>
     <div class="form">
-        <h1 class="heading">Register</h1>
-        <input type="text" placeholder="First Name" autocomplete="off" class="name" required>
-        <input type="text" placeholder=" Last Name" autocomplete="off" class="lname" required>
-        <input type="email" placeholder="Email" autocomplete="off" class="email" required>
-        <input type="username" placeholder="Username" autocomplete="off" class="username" required minlength="5">
-        <input type="tel" placeholder="Contact Number" maxlength="10" autocomplete="off" class="phone" name="phone" required>
-        <input type="password" placeholder="Password" autocomplete="off" class="password" required>
-        <button class="submit-btn">Register</button>
-        <a href="login.html" class="link">Already have an account ? Log in here</a>
+      <h1 class="heading">Register</h1>
+      <input
+        type="text"
+        placeholder="First Name"
+        autocomplete="off"
+        class="name"
+        required
+      />
+      <input
+        type="text"
+        placeholder=" Last Name"
+        autocomplete="off"
+        class="lname"
+        required
+      />
+      <input
+        type="email"
+        placeholder="Email"
+        autocomplete="off"
+        class="email"
+        required
+      />
+      <input
+        type="username"
+        placeholder="Username"
+        autocomplete="off"
+        class="username"
+        required
+        minlength="5"
+      />
+      <input
+        type="tel"
+        placeholder="Contact Number"
+        maxlength="10"
+        autocomplete="off"
+        class="phone"
+        name="phone"
+        required
+      />
+      <input
+        type="password"
+        placeholder="Password"
+        autocomplete="off"
+        class="password"
+        required
+      />
+      <button class="submit-btn">Register</button>
+      <a href="login.html" class="link"
+        >Already have an account ? Log in here</a
+      >
     </div>
     <script src="js/form.js"></script>
-</body>
+  </body>
 </html>
