--- a/public/user_sleep.html
+++ b/public/user_sleep.html
@@ -7,6 +7,7 @@
     <title>ScholarWell</title>
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/student_dashboard.css">
+    <link rel="icon" href="/public/img/ScholarWellLogo.png">
     <link rel="stylesheet" href="css/information.css">
     <link rel="stylesheet" href="css/user_sleep.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js"></script>
