--- a/public/user_timetable.html
+++ b/public/user_timetable.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ScholarWell</title>
+    <link rel="icon" href="/public/img/ScholarWellLogo.png">
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/student_dashboard.css">
     <link rel="stylesheet" href="css/information.css">
