--- a/public/student_about.html
+++ b/public/student_about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - ScholarWell</title>
-    <link rel="icon" href="/public/img/ScholarWellLogo.png">
+    <link rel="icon" href="img/ScholarWellLogo.png" />
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/student_dashboard.css">
