--- a/public/timetable.html
+++ b/public/timetable.html
@@ -7,7 +7,7 @@
     <title>ScholarWell</title>
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/student_dashboard.css">
-    <link rel="icon" href="/public/img/ScholarWellLogo.png">
+    <link rel="icon" href="img/ScholarWellLogo.png" />
     <link rel="stylesheet" href="css/timetable.css">
     
 </head>
