--- a/public/register.html
+++ b/public/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register Page</title>
-    <link rel="icon" href="/public/img/ScholarWellLogo.png" />
+    <link rel="icon" href="img/ScholarWellLogo.png" />
     <link rel="stylesheet" href="css/form.css" />
   </head>
   <body>
